examples/examples/error/2/go.mod
module 2

go 1.18

require github.com/pkg/errors v0.9.1 // indirect
